force-app/main/default/objects/Skill_Mapping__c.object
<CustomObject>
    <description>Contains the Skill mapping per condition (Skill Attribute)</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the Skill Mapping is Active.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Additional_Skill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a skill is additional. After a designated timeout period, a skill marked as additional is dropped from Omni-Channel routing. The case is then routed to the best-matched agent even if they don’t have all the skills.</description>
        <inlineHelpText>Indicates that a skill is additional. After a designated timeout period, a skill marked as additional is dropped from Omni-Channel routing. The case is then routed to the best-matched agent even if they don’t have all the skills.</inlineHelpText>
        <label>Is Additional Skill?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Level - which determines the order searching for matching skill mapping</description>
        <label>Level</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Attribute__c</fullName>
        <description>Skill Attribute separated by comma.</description>
        <inlineHelpText>For multiple Skill Attributes, separate values with comma (,)</inlineHelpText>
        <label>Skill Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skill_Level__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The level of the skill required.</description>
        <label>Skill Level</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For additional skills, specify the order in which skills are dropped if after the specified timeout no agent with that skill is available. Higher priority-value skills are dropped first. Lower priority-value skills, for example 0, are dropped last. Skills with the same priority value are dropped as a group. You can set skill priority using skills-based routing rules or Apex code.</description>
        <inlineHelpText>For additional skills, specify the order in which skills are dropped if after the specified timeout no agent with that skill is available. Higher priority-value skills are dropped first. Lower priority-value skills, for example 0, are dropped last. Skills with the same priority value are dropped as a group. You can set skill priority using skills-based routing rules or Apex code.</inlineHelpText>
        <label>Skill Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <description>Skill Name</description>
        <inlineHelpText>For Multiple Skill, separate values with comma(,)</inlineHelpText>
        <label>Skill</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Skill Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Skill__c</columns>
        <columns>Skill_Level__c</columns>
        <columns>Skill_Attribute__c</columns>
        <columns>Level__c</columns>
        <columns>Is_Additional_Skill__c</columns>
        <columns>Skill_Priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>